make it stream, make it pretty

--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.12.2",
+    "@hono/zod-validator": "^0.2.2",
     "@vee-validate/zod": "^4.13.2",
     "@vueuse/core": "^11.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "hono": "^4.5.9",
+    "markdown-it": "^14.1.0",
     "openai": "^4.57.0",
     "radix-vue": "^1.9.5",
     "tailwind-merge": "^2.5.2",
@@ -37,6 +39,7 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20.16.2",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
